# whisper-fleet-link

./: README.md  SECURE_BUILD.md  index.html  package-lock.json  tailwind.config.ts
backend/: AUDIO_SERVER.md  Cargo.toml  README.md
backend/backend/: config.json
backend/migrations/: 20240601_create_users.sql
backend/src/: auto_update.rs  key_manager.rs  letsencrypt.rs  main.rs  notify_helper.rs  setup.rs
backend/src/audio/: auth.rs  mod.rs  packet.rs  server.rs  state.rs
backend/src/routes/: auth.rs  channels.rs  db.rs  email.rs  mod.rs  oauth.rs  password.rs  twofa.rs  user.rs
backend/src/voice/: security.rs  udp_voice.rs
backend/src/ws/: mod.rs
src/: App.tsx  index.css
src/components/: AdminPanel.tsx  AuthScreen.tsx  Authentication.tsx  ChannelList.tsx  ChannelManagement.tsx  ChannelSidebar.tsx  InviteUserPanel.tsx  JoinTokenModal.tsx  RoleManagementPanel.tsx  UdpVoiceControls.tsx  VoiceApp.tsx  VoiceChannel.tsx  VoiceChannelManager.tsx  WelcomePage.tsx
src/components/ui/: SettingsModal.tsx  ThemeProvider.tsx  button.tsx
src/hooks/: README.md  useUdpVoiceStream.ts  useVoiceConnection.ts  useVoiceWebSocket.ts
src/pages/: Index.tsx
