[package]
name = "whisper-fleet-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper = { version = "1.0", features = ["full"] }
tower = "0.4"
byteorder = "1.4"
thiserror = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "uuid"] }
argon2 = "0.5"
oauth2 = "4.4"
lettre = { version = "0.11", features = ["tokio1", "smtp-transport"] }
rand = "0.8"
oath = "0.15"
dotenvy = "0.15"
base32 = "0.4"
async-trait = "0.1"
axum-extra = { version = "0.9", features = ["cookie"] }
aes = "0.8"
block-modes = "0.9"
openssl = { version = "0.10", features = ["vendored"] }
dpapi = "0.3"
acme-lib = "0.8"
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
ring = "0.16"
tracing-appender = "0.2"
notify-rust = "4.7"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "main"
path = "src/main.rs" 