[package]
name = "whisper-fleet-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework and async runtime
axum = "0.7" # https://crates.io/crates/axum
tokio = { version = "1.37", features = ["full"] } # https://crates.io/crates/tokio
futures = "0.3"
serde = { version = "1.0", features = ["derive"] } # https://crates.io/crates/serde
serde_json = "1.0" # https://crates.io/crates/serde_json
jsonwebtoken = "9.2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1" # https://crates.io/crates/tracing
tracing-subscriber = "0.3" # https://crates.io/crates/tracing-subscriber
hyper = { version = "1.0", features = ["full"] }
tower = "0.4"
byteorder = "1.4"
thiserror = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "uuid"] }
argon2 = "0.5"
oauth2 = "4.4"
lettre = { version = "0.11", features = ["tokio1", "smtp-transport"] }
rand = "0.8" # https://crates.io/crates/rand
oath = "0.15"
dotenvy = "0.15"
base32 = "0.4"
async-trait = "0.1"
axum-extra = { version = "0.9", features = ["cookie"] }
aes = "0.8" # https://crates.io/crates/aes
block-modes = "0.9" # https://crates.io/crates/block-modes
openssl = { version = "0.10", features = ["vendored"] } # https://crates.io/crates/openssl
windows-dpapi = "0.2" # https://crates.io/crates/windows-dpapi
acme-lib = "0.8" # https://crates.io/crates/acme-lib
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] } # https://crates.io/crates/reqwest
ring = "0.16" # https://crates.io/crates/ring
tracing-appender = "0.2" # https://crates.io/crates/tracing-appender
notify-rust = "4.11" # https://crates.io/crates/notify-rust

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "main"
path = "src/main.rs" 